(This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)

3.0.2

  * Comments in .yaml files are highlighted more correctly.

  * Mark Find and FindRegExp patterns for recompilation when switching buffers.

  * Fixed missing screen update after ABOUT (regression introduced in 3.0.1).
    Thanks to Brian Callahan for reporting this bug.

  * Help command uses its optional parameter again.

  * PasteVert behaves beyond the right end of lines again.

  * AutoComplete keeps words containing apostrophes as single words ("can't"
    instead of "can" and "t").

  * Home, End, Tab keys now work in menus.

  * Backward FindRegExp works again.

  * Resizing the window in inputs, requesters is more sane.


3.0.1 2015-06-22

  * Updated version of GNU regex library provides 64-bit regular
    expressions.

  * We no longer assign stdin, fixing a *BSD compatibility problem (thanks
    to Brian Callahan for reporting this issue).

  * Fixed missing screen update at startup when no default autoprefs are
    available.

3.0  2015-06-18

  * Allow remapping of character SEQuences in .keys files.

  * Global macros are now loaded from NE_GLOBAL_DIR/macros rather than
    NE_GLOBAL_DIR (/usr/local/share/ne/macros vs /usr/local/share/ne).

2.6  2015-04-17

  * Ancient bug with vertical clip edges fixed.

  * AutoComplete occasionally would omit some completions.

  * Exit attempts to save all modified documents even if one cannot be saved.
    (It used to give up on the first error.)

  * Avoid crash when resizing window while command prompt is active.

  * Avoid SaveMacro optimization before Undo, called macros.

2.5  2012-12-24

  * Pathologically long-running PARAGRAPH commands are now stoppable (^-\).

  * Moved modified flag '*' to right end of status line to be easier to see.

  * COPY, CUT, ERASE copy the correct text to the clip and do not crash
    any more when in free form mode and cursor or mark is beyond the
    end of a line.
